--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     },
     "dependencies": {
         "@coral-xyz/anchor": "^0.28.0",
-        "@metaplex-foundation/js": "^0.19.4"
+        "@metaplex-foundation/js": "^0.19.4",
+        "@solana/spl-token": "^0.3.8"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
